--- a/forecast.html
+++ b/forecast.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
 
 
-Температура сейчас :04.10.2018 15:00 : 8.5 &deg;C<br /><br>
-<img src='./img/09d.png'><br />
+04.10.2018 15:00 <br>
+Температура сейчас: 8.5 &deg;C<br />
+<img src='./img/09d.png' class="CurrentWeatherImg"><br />
+
+
 <H1>City: Korolev<br></H1>>
 LastUpdate: 04.10.2018 15:33<br />
 Заход солнца : 17:55:25<br />
