--- a/forecast.html
+++ b/forecast.html
@@ -10,81 +10,32 @@
 
 <body>
 
+<button>Управление</button>
 
+<div class="curTempFlexContainer">
+    <div style="align-content: center; text-align: center;">
+        Температура сейчас на 15:00<br>
+        <span class="TempSel">8.5 &deg;C</span> <br />
+    </div>
+    <div style="flex-grow: 1;align-self: center;align-content: center; text-align: center;">
+        <img src='./img/09d.png' class="igmWeatherCurrentIcon"><br />
+        солнечно
+    </div>
+</div>
 
-04.10.2018 15:00 <br>
-Температура сейчас: 8.5 &deg;C<br />
-<img src='./img/09d.png' class="CurrentWeatherImg"><br />
-
-
-<H1>City: Korolev<br></H1>>
-LastUpdate: 04.10.2018 15:33<br />
+<H2>Город: Korolev<br></H2>
 Заход солнца : 17:55:25<br />
-<br />
-Weather forecast at 04.10.2018 from 15:00 to 18:00<br />
-6.45 &deg;C<br />
-Размер осадков мм : 0.3475<br />
-rain<br />
-<img src='./img/10n.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 04.10.2018 from 18:00 to 21:00<br />
-5.23 &deg;C<br />
-Размер осадков мм : 0.8<br />
-rain<br />
-<img src='./img/10n.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 04.10.2018 from 21:00 to 00:00<br />
-3.83 &deg;C<br />
-Размер осадков мм : 0.075<br />
-rain<br />
-<img src='./img/10n.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 04.10.2018 from 00:00 to 03:00<br />
-2.39 &deg;C<br />
-Размер осадков мм : 0.0049999999999999<br />
-rain<br />
-<img src='./img/10n.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 05.10.2018 from 03:00 to 06:00<br />
-1.95 &deg;C<br />
-Размер осадков мм : 0.015<br />
-rain<br />
-<img src='./img/10n.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 05.10.2018 from 06:00 to 09:00<br />
-2.69 &deg;C<br />
-Размер осадков мм : 0.06<br />
-rain<br />
-<img src='./img/10d.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 05.10.2018 from 09:00 to 12:00<br />
-4.82 &deg;C<br />
-Размер осадков мм : 0.0049999999999999<br />
-rain<br />
-<img src='./img/10d.png'><br />
-легкий дождь<br />
-<br />
----<br />
-Weather forecast at 05.10.2018 from 12:00 to 15:00<br />
-6.46 &deg;C<br />
-Размер осадков мм : 0.00025<br />
-snow<br />
-<img src='./img/01d.png'><br />
-ясно<br />
-<br />
----<br />
+
+<div class="curTempFlexContainer">
+    <div style="align-content: center; text-align: center;">
+        на 15:00<br>
+        <span class="TempSel">6.5 &deg;C</span> <br />
+    </div>
+    <div style="flex-grow: 1;align-self: center;align-content: center; text-align: center;">
+        <img src='./img/11d.png' class="igmWeatherCurrentIcon"><br>легкий дождь
+    </div>
+</div>
+
 
 </body>
 </html>
